Logo not working with alignment properly - Needs fixing

--- a/style.css
+++ b/style.css
@@ -38,8 +38,8 @@ body{
 
 #headerIcon{
 
-    grid-column: 1/2;
-    justify-self:right;
+    /* grid-column: 1/2;
+    justify-self:right; */
     
 }
 
@@ -56,6 +56,8 @@ body{
     grid-template-rows: 1fr 1fr 1fr;
 
 }
+
+
 #visionStatement{
 
 grid-column: 1/4;
@@ -63,10 +65,8 @@ grid-row: 2/3;
 justify-self: center;
 }
 
-#wrapper{
-    grid-column: 2/3;
-    grid-row: 2/3;
-}
+
+
 
 .chatbox{
     grid-column: 3/4;
@@ -95,11 +95,21 @@ justify-self: center;
 
 /* CSS ANIMATION BELOW --> TAKEN FROM CSS TRICKS */
 
-wrapper {
+
+#animation{
+    grid-column: 1/2;
+    grid-row: 1/4;
+    width :50%;
+    height: 10%;
+}
+
+
+.wrapper {
   width: 300px;
   height: 300px;
   display: block;
   position: relative;
+  
 }
 
 .head {
@@ -235,8 +245,8 @@ wrapper {
   cursor: pointer;
   opacity: 0.8;
   position: fixed;
-  bottom: 23px;
-  right: 28px;
+  bottom: 50px;
+  right: 0px;
   width: 280px;
 }
 
@@ -244,8 +254,8 @@ wrapper {
 .chat-popup {
   display: none;
   position: fixed;
-  bottom: 0;
-  right: 15px;
+  bottom: 50px;
+  right: 0px;
   border: 3px solid #f1f1f1;
   z-index: 9;
 }
